# talking-flower-voice

./: .gitattributes  .gitignore  README.md  go-webui.ps1  pyproject.toml  requirements-inference.txt  requirements.txt  webui.py
.github/: instructions.md
GPT_SoVITS/: s1_train.py  s2_train.py  s2_train_v3.py  s2_train_v3_lora.py
GPT_SoVITS/TTS_infer_pack/: TTS.py
GPT_SoVITS/prepare_datasets/: 2-get-sv.py
GPT_SoVITS/text/G2PWModel/: g2pW.onnx
GPT_weights_v2ProPlus/: talkflower_zh_v2pp_strict-e18.ckpt
SoVITS_weights_v2ProPlus/: talkflower_zh_v2pp_strict_e10_s2120.pth
docs/: ASSETS.md  DEPENDENCIES.md  MODELSCOPE.md  PRINCIPLES.md  THIRD_PARTY_SOURCES.md  TRAINING.md  USAGE.md  training-journey-blog.html
outputs/asr_eval_clarity_output/: asr_eval_clarity_input.list
outputs/asr_eval_output/: asr_eval_input.list
outputs/asr_eval_strict_output/: asr_eval_strict_input.list
outputs/asr_eval_v2pp_output/: asr_eval_v2pp_input.list
outputs/benchmark/: talkflower_cpu.json  talkflower_cuda.json
scripts/: benchmark-talkflower.ps1  build-train-config.py  check-assets.ps1  download-modelscope-model.ps1  filter-gpt-sovits-list.py  infer-talkflower.ps1  init-venv.ps1  package-modelscope.ps1  package-modelscope.py  prepare-smbw-training.ps1  prepare-smbw-zh-dataset.ps1  stage-01-prepare-data.ps1  stage-02-format-dataset.ps1  stage-03-train-sovits.ps1  stage-04-train-gpt.ps1  stage-05-test-model.ps1  start-webui.ps1  talkflower-tts.py  train-all.ps1  upload-modelscope.ps1  upload-modelscope.py
