[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talking-flower-voice"
version = "0.1.0"
description = "Managed GPT-SoVITS workspace for local TTS fine-tuning on Windows."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Richard" }
]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["GPT_SoVITS*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

